unpackaged/main/default/objects/SDO_Service_Custom_Debit_Card__c/SDO_Service_Custom_Debit_Card__c.object-meta.xml
<CustomObject>
    <description>What: request from the platform team for flows using lightning components</description>
    <label>Credit Account</label>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>Custom Debit Card Orders Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>