unpackaged/main/default/objects/SDO_Service_Custom_Debit_Card__c/fields/Business_Use__c.field-meta.xml
<CustomField>
    <fullName>Business_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Use</label>
    <type>Checkbox</type>
</CustomField>