unpackaged/main/default/objects/SDO_Service_Custom_Debit_Card__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <label>Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Astro Yetti</fullName>
                <default>true</default>
                <label>Astro Yetti</label>
            </value>
            <value>
                <fullName>Ohana</fullName>
            </value>
            <value>
                <fullName>Friends</fullName>
            </value>
            <value>
                <fullName>Adventures</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>