unpackaged/main/default/objects/SDO_Service_Custom_Debit_Card__c/fields/ContactID__c.field-meta.xml
<CustomField>
    <fullName>ContactID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Custom_Debit_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>