unpackaged/main/default/objects/SDO_Service_Custom_Debit_Card__c/fields/FriendlyName__c.field-meta.xml
<CustomField>
    <fullName>FriendlyName__c</fullName>
    <label>Friendly Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>