unpackaged/main/default/objects/SDO_Service_Custom_Debit_Card__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;In Progress&quot;</defaultValue>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>